--- a/Alura Books/index.html
+++ b/Alura Books/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/header/header.css">
     <link rel="stylesheet" href="./CSS/banner/banner.css">
-    <link rel="stylesheet" href="./CSS/card/carrossel.css">+
+    <link rel="stylesheet" href="./CSS/card/carrossel.css">
     <link rel="stylesheet" href="./CSS/card/card.css">
     <link rel="stylesheet" href="./CSS/topicos/topicos.css">
     <link rel="stylesheet" href="./CSS/contato/contato.css">
